--- a/src/components/pages/AddCard.module.css
+++ b/src/components/pages/AddCard.module.css
@@ -9,7 +9,7 @@
     padding: 1rem 2rem;
 }
 
-.form div .file_input, input, textarea {
+.form div .input_file, input, textarea {
     border-radius: 10px;
     border: 1px solid #EADDC4;
     background-color: #FFF5E4;
@@ -20,23 +20,19 @@
     outline: 1px solid #D3C1A6;
 }
 
-.form div input[type="file"] {
-    display: none;
+input[type="file"] {
+    display: none !important;
 }
 
-.form div .file_input {
+.input_file {
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
     cursor: pointer;
-    font-size: 1.4rem;
-    color: #808080;
-    height: 2.8rem;
+    color: #666;
+    font-size: 1rem;
+    display: inline-block;
     text-align: center;
-    align-content: center;
-}
-
-.form div input[type="text"]::placeholder, 
-.form div textarea::placeholder {
-    color: #808080;
-}
+}   
 
 .form hr {
     background-color: #D9D9D9;
