--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -49,14 +49,34 @@ main {
 }
 
 .card {
-    width: 21.5rem;
+    width: 21.2rem;
     height: 36rem;
     padding: 1rem;
     border-radius: 10px;
     background-color: #FAF3E0;
     display: flex;
     flex-direction: column; 
-    gap: 1.5rem;
+    gap: 1rem;
+}
+
+.card button {
+    width: 100%;
+    background-color: transparent;
+    border: 1px solid transparent;
+    cursor: pointer;
+    background-color: #D8EFFF;
+    border-radius: 5px;
+    padding: .4rem;
+    transition: .4s;
+}
+
+.card button:hover {
+    background-color: transparent;
+    border: 1px solid #D8EFFF;
+}
+
+.card button svg {
+    font-size: 1.4rem;
 }
 
 .card h2, p {
@@ -64,7 +84,7 @@ main {
 }
 
 .card p {
-    height: 25%;
+    height: 15%;
 }
 
 .card img {
