--- a/src/components/ui/Main.module.css
+++ b/src/components/ui/Main.module.css
@@ -1,15 +1,3 @@
-.main {
-    width: 80%;
-    height: 40rem;
-    margin: 1.5rem auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    border-radius: 25px;
-}
-
 .main div {
     width: 100%;
     height: fit-content;
@@ -24,20 +12,20 @@ span {
     font-weight: 500;
 }
 
-main div input[type="text"], input[type="email"] {
+.main div input[type="text"], input[type="email"] {
     height: 2.8rem;
     padding: .8rem;
     font-size: 1.2rem;
 }
 
-main div textarea {
+.main div textarea {
     resize: none;
     height: 4rem;
     padding: .6rem .8rem;
     font-size: 1rem;
 }
 
-main button {
+.main button {
     background-color: #D6E8FF;
     color: #2A6F97;
     cursor: pointer;
@@ -48,7 +36,7 @@ main button {
     font-size: clamp(.8rem, 3vw, 1.4rem); 
 }
 
-main button:hover {
+.main button:hover {
     background-color: #B5D4FF;
     color: #FFFFFF;
 }
