--- a/src/components/pages/AddCard.module.css
+++ b/src/components/pages/AddCard.module.css
@@ -1,6 +1,6 @@
-.form  {
+.form {
     width: 100%;
-    height: 100%;
+    height: 85%;
     border-radius: 25px;
     display: flex;
     flex-direction: column;
@@ -9,10 +9,12 @@
     padding: 1rem 2rem;
 }
 
-.form div .input_file, input, textarea {
+.form div .input_file,
+input,
+textarea {
     border-radius: 10px;
     border: 1px solid #EADDC4;
-    background-color: #FFF5E4;
+    background-color: #FFF5E4;  
 }
 
 .form div input:focus,
@@ -32,7 +34,7 @@ input[type="file"] {
     font-size: 1rem;
     display: inline-block;
     text-align: center;
-}   
+}
 
 .form hr {
     background-color: #D9D9D9;
@@ -43,4 +45,18 @@ input[type="file"] {
     .form {
         padding: 0;
     }
+}
+
+.atributes {
+    width: 100%;
+    padding: 0 2rem;
+}
+
+.atributes button {
+    background-color: #2A6F97;
+    color: #FFFF;
+    width: 17rem;
+    height: 3rem;
+    font-size: 1.2rem;
+    border-radius: 25px;
 }
