--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -56,6 +56,7 @@ main {
     background-color: #FAF3E0;
     display: flex;
     flex-direction: column; 
+    justify-content: space-between;
     gap: 1rem;
 }
 
@@ -92,4 +93,14 @@ main {
     height: 50%;         
     border-radius: 5px;  
     object-fit: cover;   
+}
+
+.card .date {
+    height: 2rem;
+    background-color: #2A6F97;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: #D8EFFF;
 }
