--- a/src/components/pages/AddCard.module.css
+++ b/src/components/pages/AddCard.module.css
@@ -1,12 +1,12 @@
 .form {
     width: 100%;
-    height: 85%;
+    height: 80%;
     border-radius: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
-    padding: 1rem 2rem;
+    gap: 1.5rem;
+    padding: .5rem 2rem;
 }
 
 .form div .input_file,
@@ -47,7 +47,7 @@ input[type="file"] {
     }
 }
 
-.atributes {
+.atributes { 
     width: 100%;
     padding: 0 2rem;
 }
